# kmpi-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml
docker/: Dockerfile
migrations/: ss.sql
src/: main.rs
src/common/: init.rs  mod.rs  sql_connections.rs
src/dao/: mod.rs  user.rs  vessel.rs
src/service/: mod.rs  user_service.rs  vessl_service.rs
src/vojo/: add_user_req.rs  admin_req.rs  admin_res.rs  base_response.rs  delete_user_req.rs  login_req.rs  login_res.rs  mod.rs  update_user_req.rs
