[package]
name = "kmpi-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
axum= "0.7.5"
criterion = { version = "0.4", features = ["html_reports"] }
tokio = { version = "1.36.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
bytes = "1"
http-body-util = { version = "0.1.0"}
anyhow = { version = "1.0.80"}
clap= {version="4.5.4",features = ["derive"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.3"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite"] }
